--- a/deploy/crds/dteopen.example.com_v1alpha1_dteopenassigncluster_cr.yaml
+++ b/deploy/crds/dteopen.example.com_v1alpha1_dteopenassigncluster_cr.yaml
@@ -4,4 +4,4 @@ metadata:
   name: dteopenassigncluster-user-ibmcloudlite01-cluster-01
 spec:
   # Add fields here
-  size: 1
+  email: ibmcloudlite01@gmail.com
