--- a/roles/dteopenassigncluster/tasks/main.yml
+++ b/roles/dteopenassigncluster/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 # tasks file for dteopenassigncluster
 - name: Run the script
-  script: assign-cluster.sh
+  script: assign-cluster.sh "{{email}}"
