--- a/watches.yaml
+++ b/watches.yaml
@@ -5,13 +5,9 @@
   role: /opt/ansible/roles/dteopenassigncluster
 - version: v1alpha1
   group: dteopen.example.com
-  kind: DTEOpenUnassignCluster
-  role: /opt/ansible/roles/dteopenunassigncluster
+  kind: DTEOpenGetClusterStatus
+  role: /opt/ansible/roles/dteopengetclusterstatus
 - version: v1alpha1
   group: dteopen.example.com
   kind: DTEOpenInstallOperator
   role: /opt/ansible/roles/dteopeninstalloperator
-- version: v1alpha1
-  group: dteopen.example.com
-  kind: DTEOpenUninstallOperator
-  role: /opt/ansible/roles/dteopenuninstalloperator
