--- a/deploy/crds/dteopen.example.com_dteopengetclusterstatuss_crd.yaml
+++ b/deploy/crds/dteopen.example.com_dteopengetclusterstatuss_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: dteopenuninstalloperators.dteopen.example.com
+  name: dteopengetclusterstatuss.dteopen.example.com
 spec:
   group: dteopen.example.com
   names:
-    kind: DTEOpenUninstallOperator
-    listKind: DTEOpenUninstallOperatorList
-    plural: dteopenuninstalloperators
-    singular: dteopenuninstalloperator
+    kind: DTEOpenGetClusterStatus
+    listKind: DTEOpenGetClusterStatusList
+    plural: dteopengetclusterstatuss
+    singular: dteopengetclusterstatus
   scope: Namespaced
   subresources:
     status: {}
